test/sematest/invalid/identifier_system_in_scope5.java
class A {
  public int System;
  public static void main(String[] args) {
    int a = System + 3;
  }
}